<resources>
    <string name="app_name">Timetable</string>
    <string name="title_activity_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_data">Loading Data...</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="create_group">Create New Group</string>
    <string name="logo_image">Logo</string>
    <string name="usernamelabel">Username:</string>
    <string name="username">username</string>
    <string name="passwordlabel">Password:</string>
    <string name="password">Password</string>
    <string name="emaillabel">Email address :</string>
    <string name="email">Email Address</string>
    <string name="phonelabel">Phonenumber :</string>
    <string name="phone">Phonenumber</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="task_description">Description</string>
    <string name="task_title">Title</string>
    <string name="task_deadline">Done By</string>
    <string name="tv_login_or">OR</string>
    <string name="past_due">Past Due</string>
    <string name="due">"Due: "</string>
    <string name="task_complete">Completed</string>
    <string name="due_date">due date</string>
    <string name="task_name">Test Name</string>
    <string name="switch_yes">Yes</string>
    <string name="switch_no">No</string>
    <string name="task_detail_complete">Complete</string>
    <string name="title_activity_manifast_add">manifastAdd</string>
    <string name="usernametxt">Username</string>
    <string name="new_group_label">New group</string>
    <string name="group_create_image">Image</string>
    <string name="name_label">Name</string>
    <string name="group_label">Group</string>
    <string name="receiver">For who?</string>
    <string name="assign_task">Assign Task</string>
    <string name="timeframe">Timeframe</string>
    <string name="subject">Subject</string>
    <string name="task_create_titel">New task</string>
</resources>
