<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/customBG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/image_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/timetable" />
    <GridLayout
        android:layout_below="@+id/image_logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="4"
        android:id="@+id/gridLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/usernamelabel"
            android:id="@+id/username_label"
            android:textColor="@color/customAccent"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_signup"
            android:hint="@string/username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/passwordlabel"
            android:id="@+id/password_label"
            android:paddingTop="25dp"
            android:textColor="@color/customAccent"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_signup"
            android:hint="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Repeate password"
            android:id="@+id/password_labelR"
            android:paddingTop="25dp"
            android:textColor="@color/customAccent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_signupR"
            android:hint="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/emaillabel"
            android:id="@+id/email_label"
            android:paddingTop="25dp"
            android:textColor="@color/customAccent"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_signup"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/phonelabel"
            android:id="@+id/phone_label"
            android:paddingTop="25dp"
            android:textColor="@color/customAccent"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone_signup"
            android:hint="@string/phone"
            android:inputType="phone"/>
    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signUp"
        android:text="@string/btn_signup"
        android:onClick="onClickMakeUser"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/signUpAvatar"
        android:src="@drawable/addavatar"
        android:layout_below="@+id/gridLayout2"
        android:onClick="onClickGallery"
        android:layout_centerHorizontal="true" />

</RelativeLayout>