<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/customBG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/image_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/timetable" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="4"
        android:id="@+id/login_grid"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/usernamelabel"
        android:id="@+id/username_label"
        android:textColor="@color/customAccent"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tf_username"
        android:hint="@string/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/passwordlabel"
        android:id="@+id/password_label"
        android:paddingTop="25dp"
        android:textColor="@color/customAccent"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/tf_password"
        android:hint="@string/password" />
    </GridLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="login"
        android:layout_below="@+id/login_grid"
        android:layout_alignStart="@+id/login_grid"
        android:layout_alignEnd="@+id/login_grid"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login_or"
        android:text="@string/tv_login_or"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:textColor="@color/customAccent"/>

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startSignUp"
        android:text="Sign Up"
        android:layout_below="@+id/tv_login_or"
        android:layout_alignStart="@+id/bt_login"
        android:layout_alignEnd="@+id/bt_login"/>


</RelativeLayout>
